script tags addition for js files

--- a/pilot_shop/pilot.html
+++ b/pilot_shop/pilot.html
@@ -3,6 +3,9 @@
 <head>	
 	<title>PILOT SHOP</title>
 	<link rel="stylesheet" type="text/css" href= "pilot.css"/>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="handlebars.js"></script>
+    <script src="demo.js" defer></script>
 </head>
 <body class="container style">
 	
@@ -84,91 +87,8 @@
 		</section>
 	</main>
 	
-	<div class="featured">
-		<h4>FEATURED PRODUCTS</h4>
-	</div>
-	
-	<section class="featured-products">
-		<div class="product-container">
-			<div class="product-image prod-1">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-2">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-3">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-4">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-5">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-6">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-7">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-		
-		<div class="product-container">
-			<div class="product-image prod-8">
-			</div>
-			<div class="product-description">
-				<p>AKG AVIATION AV100 ANR HEADSET</p>
-				<p>When you deal with sky during en you deal with sky during  en you deal with sky during  fdfgdfgfdg nesfgdfghfgfgdfgdfg</p>
-					<p>From $66.00</p>
-			</div>
-		</div>
-	</section>
-	
+<div class="featured">
+    <h4>FEATURED PRODUCTS</h4>
+</div>
 </body>
 </html>
